--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "jetifier": "^2.0.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-elements": "^3.4.2",
     "react-native-flipper": "^0.92.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.9.2",
     "react-native-pose": "^0.9.1",
     "react-native-reanimated": "^2.2.0",
+    "react-native-remix-icon": "^0.3.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
